v. 0.0.8 - Contact and Hire Screens

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ html {
 }
 
 .menuOpenStyle {
-  @apply content-center  shadow-sm rounded-md w-[28rem];
+  @apply content-center  shadow-sm rounded-md;
 }
 
 .pDescription {
