--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ html {
 }
 
 .menuOpenStyle {
-  @apply content-center z-20 shadow-sm rounded-md;
+  @apply content-center bg-lightGrayAlpha z-20 shadow-sm rounded-md;
 }
 
 .pDescription {
