--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,10 @@ html {
   animation: ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
 
+.margins {
+  @apply mx-1 sm:mx-2 md:mx-3 lg:mx-4 xl:mx-6 2xl:mx-8
+}
+
 .vBtnStyle {
   @apply text-sm cursor-pointer md:text-base md:text-mediumGray text-golden hover:underline hover:underline-offset-1 hover:decoration-black md:hover:decoration-golden;
 }
