v. 0.2.7 - Build Test - MVP

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ html {
 }
 
 .pDescription {
-  @apply text-sm text-center text-mediumGray;
+  @apply text-sm text-center whitespace-normal text-mediumGray;
 }
 
 .styleScreens {
