--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,7 @@ html {
 }
 
 .vBtnStyle {
-  @apply text-sm cursor-pointer md:text-base md:text-mediumGray text-golden hover:underline hover:underline-offset-1 hover:decoration-black md:hover:decoration-golden;
+  @apply text-sm cursor-pointer md:text-base text-mediumGray hover:underline hover:underline-offset-1 hover:decoration-black md:hover:decoration-golden;
 }
 
 .smallTitles {
